--- a/zpromo.html
+++ b/zpromo.html
@@ -144,9 +144,9 @@
     <div class="bands tel-band">
         <div class="closeTelBand close-band"><i class="fa fa-times"></i></div>
         <div class="content-info-band">
-            <div class="ic-cont"><a href="https://wa.link/p3o34c"><img src="images/logo/wp.png" alt="Contáctanos" width="40" height="40" /></a></div>
+            <div class="ic-cont"><a href="https://wa.link/4oriqi"><img src="images/logo/wp.png" alt="Contáctanos" width="40" height="40" /></a></div>
             <div class="txt-cont">
-                <a href="https://wa.link/p3o34c"><img src="images/contactanos.png" alt="Contáctanos" width="180" height="40" /></a>
+                <a href="https://wa.link/4oriqi"><img src="images/contactanos.png" alt="Contáctanos" width="180" height="40" /></a>
             </div>
         </div>  
     </div>
@@ -159,7 +159,7 @@
                 </div>
                 <div class="col-12 col-sm-4 social">
                     <p class="pull-right">
-                            <a href="https://wa.link/p3o34c"><i class="fa fa-whatsapp"></i></a>
+                            <a href="https://wa.link/4oriqi"><i class="fa fa-whatsapp"></i></a>
                             <a href="https://www.facebook.com/construccion.albercas.monterrey/"><i class="fa fa-facebook"></i></a>
                             <a href="https://instagram.com/construccion.albercas.mty/"><i class="fa fa-instagram"></i></a>
                             <a href="https://www.google.com.mx/"><i class="fa fa-google"></i></a>
